# cfhdb

./: Cargo.toml  Makefile
backup/src/: main.rs
data/: cfhdb-unbind-blacklist.service  profile-config.json
data/polkit-1/actions/: com.github.cosmicfusion.cfhdb.script_lock.policy  com.github.cosmicfusion.cfhdb.sysfs_helper.policy
data/profiles/: pci.json  usb.json
data/scripts/: sysfs_helper.sh  unbind_blacklist.sh
locales/: en_US.json
locales/locales/: en_US.json
src/: bt_func.rs  config.rs  dmi_func.rs  main.rs  pci_func.rs  usb_func.rs
src/lib/: pci.rs  usb.rs
src/lib/bt/: mod.rs
src/lib/dmi/: mod.rs
src/lib/pci/: mod.rs
src/lib/usb/: mod.rs
