[package]
name = "cfhdb"
version = "0.1.1"
edition = "2021"

[dependencies]
libpci = { path = "libpci", version = "0.1.0" }
rusb = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rust-i18n = "3.0.1"
cli-table = "0.4.9"
colored = "3.0.0"
duct = "0.13.7"
regex = "1.11.1"
users = "0.11.0"

[lib]
name = "libcfhdb"
path = "src/lib/lib.rs"
